0.Downgrade java version to 1.8 (#112)
* 0.Downgrade java version to 1.8